--- a/index.html
+++ b/index.html
@@ -389,7 +389,8 @@
         <div class="col-3">
           <h4 class="pt-4 text-white fw-semibold">Projeto</h4>
           <p class="text-white">Blog desenvolvido por @Vinildo focado em conteúdo do universo de Blue Lock.</p>
-          <a href="#" class="text-decoration-none text-white"><i class='bx bxl-github'></i></a>
+          <a href="https://github.com/Vinildo" target="_blank" rel="noopener" class="text-decoration-none text-white"><i
+              class='bx bxl-github'></i></a>
         </div>
       </div>
     </section>
