--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
       <div class="row">
         <div class="col-5">
           <h4 class="fw-semibold text-white pt-4">Inscreva-se</h4>
-          <p class="text-secondary pb-3">fique por dentro das noticias do nosso Blog</p>
+          <p class="text-secondary pb-3">Fique por dentro das noticias do nosso Blog</p>
           <div class="mb-3">
             <div class="mb-3 d-flex">
               <input type="email" class="rounded-1 me-2 pe-5 px-2" name="" id="" aria-describedby="emailHelpId"
