--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           <div class="icon-rank d-flex">
             <img src="img/Icon/Polygon 1.jpg" alt="">
             <div class="name d-flex">
-              <a href="#" class="text-decoration-none ms-3">
+              <a href="parisxgen.html" class="text-decoration-none ms-3">
                 <p class="mb-0">
                   paris x gen
                 </p>
