--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#Newsletter">Newsletter</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Autor">Autor</a>
+            <a class="nav-link" href="autor.html">Autor</a>
           </li>
         </ul>
       </div>
@@ -295,8 +295,10 @@
                   bastard mûchen
                 </p>
               </a>
-              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#2</span><span
-                  class="ms-1 fw-bolder">ISAGI</span> -
+              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#2</span><a
+                  class="text-decoration-none text-dark" href="Isagi.html">
+                  <span class="ms-1 fw-bolder">ISAGI</span> -
+                </a>
                 ¥150,000,000
               </p>
             </div>
