personagens ranking criados

--- a/barou.html
+++ b/barou.html
@@ -8,7 +8,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Blue Lock Blog - eFootball terá colaboração com o anime de Blue Lock.</title>
+    <title>Blue Lock Blog - Barou.</title>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="inter.html">Posts</a>
+                        <a class="nav-link" href="index.html">osts">Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Newsletter</a>
@@ -47,70 +47,50 @@
             <div class="logo mb-5">
                 <img src="img/Blue_Lock_Logo (1).png" alt="">
             </div>
-            <div class="categoria py-4 text-center">
-                <p class="text-white px-5 ps-5 mb-0">Noticia</p>
-                <p class="text-white px-5 ms-4 mb-0">Game</p>
+            <div class="mt-5">
+                <h4 class="titulo text-center fw-bold"><a href="" class="text-decoration-none">Personagens</a></h4>
+                <h1 class="text-dark text-center fw-bold mb-5">Shoei Baro</h1>
             </div>
-            <h1 class="titulos ps-5 fw-semibold"> eFootball terá colaboração com o anime <span class="text-primary">Blue
-                    Lock.</span>
-            </h1>
-            <p class="ps-5 fs-5 mt-3">Com cartas temáticas, avatares, kits, desafios no jogo e mais.</p>
-            <div class="fig">
-                <img src="img/efootball-bluelock-qe149r88o10x.webp" alt="" class="w-100">
+            <div class="col-6 emalta">
+                <h4>Informações</h4>
+                <div class="row">
+                    <ul class="list-group list-group-flush mt-5 col-6">
+                        <li class="list-group-item"><span class="fw-bold">Gênero:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Idade:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Aniversário:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Altura:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Peso</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Cor do Cabelo:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Cor dos olhos:</span></li>
+                    </ul>
+                    <ul class="list-group list-group-flush mt-5 col-6">
+                        <li class="list-group-item">Macho</li>
+                        <li class="list-group-item">18</li>
+                        <li class="list-group-item">Junho, 27</li>
+                        <li class="list-group-item">187 cm(6'2')</li>
+                        <li class="list-group-item">---</li>
+                        <li class="list-group-item">Preto</li>
+                        <li class="list-group-item">Vermelho</li>
+                    </ul>
+                </div>
+                <h4 class="mt-5">Sobre</h4>
+                <p class="sobre mt-5">Shoei Baro é um candidato ao Blue Lock, que atualmente joga como atacante do Ubers
+                    durante a Liga Neo Egoísta.
+                    Neo Egoísta.</p>
+                <p class="sobre">Baro é um atacante muito egoísta e arrogante cujo principal objetivo é ser a estrela do
+                    campo em todos os momentos
+                    enquanto se esforça para se tornar o melhor atacante do mundo. Ao chegar pela primeira vez ao Blue
+                    Lock, ele era membro
+                    do Time X durante a Primeira Seleção e empatou como artilheiro em seu estrato designado. Depois que
+                    o Blue Lock Eleven
+                    jogou contra a seleção sub-20 do Japão , Baro foi classificado como um dos melhores jogadores do
+                    projeto.</p>
+                <p class="sobre mb-5"></p>
             </div>
-            <div class="information ps-5 mb-4">
-                <p class="mt-5 lh-sm">A Konami anunciou uma parceria entre eFootball 2024 e o anime de futebol Blue
-                    Lock, que inclui a adição de novos
-                    conteúdos na forma de cartas temáticas, avatares, kits, desafios no jogo, entre outros.
-                </p>
-
-                <p class="lh-sm">Durante o período limitado da campanha, que começou em 21 de março e vai até 11 de
-                    abril, os usuários podem adicionar
-                    uma variedade de cartas de edição especial do Blue Lock aos seus “times dos sonhos”, começando com
-                    as contratações
-                    gratuitas de Takefusa Kubo e Filippo Inzaghi. Esses jogadores fazem parte de uma série de cartas do
-                    eFootball
-                    especialmente criadas em colaboração com os personagens do Blue Lock e as estrelas do futebol da
-                    vida real.
-                </p>
+            <div class="col-6">
+                <img class="ms-5" src="img/characters/barou.png" alt="">
             </div>
-            <div class="fig">
-                <img src="img/efootball-bluelock-kit-en.avif" class="w-100" alt="">
-            </div>
-            <div class="information ps-5 my-2">
-                <p class="fs-5 mt-4">Como parte da colaboração, os uniformes de edição limitada do “time vermelho do
-                    Blue Lock” e do “time branco do Blue
-                    Lock” podem ser usados por todos os “times dos sonhos”. Os jogadores podem desbloquear o kit do time
-                    branco com o
-                    “Pacote do Blue Lock: Yoichi Isagi” e, ao participar do “Tour Event: Segunda Seleção do Blue Lock”,
-                    também podem receber
-                    o kit do “time vermelho do Blue Lock”. Por meio de várias conquistas e desafios da campanha, os
-                    usuários podem obter
-                    diversas recompensas, totalizando até 150.000 de Exp., 60.000 GP e 50 moedas do eFootball.
-                </p>
-
-                <p class="fs-5 ps-5">Fonte: <a href="https://www.konami.com/efootball/pt-br/page/2024/versioninfo_v3-40"
-                        class="text-decoration-none fw-bolder">Konami Efootball</a></p>
-
-                <ul class="fs-5 ps-5 my-3"><span class="fw-bolder">Leia também:</span>
-                    <li class="mt-3 ps-4"><a href="#" class="text-decoration-none">Filme recebe trailer
-                            inédito focado em Seishiro Nagi e Mikage Reo
-                        </a>
-                    </li>
-                    <li class="ps-4"><a href="#" class="text-decoration-none">Todas as vezes que o
-                            Brasil apareceu em Blue Lock
-                        </a>
-                    </li>
-                    <li class="ps-4"><a href="#" class="text-decoration-none">Blue Lock revela capa do volume
-                            29
-                        </a>
-                    </li>
-                    <li class="ps-4"><a href="#" class="text-decoration-none">Saiba tudo sobre a Liga Neo
-                            Egoísta
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        </div>
     </section>
 
 
