--- a/cap260.html
+++ b/cap260.html
@@ -8,7 +8,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Blue Lock Blog - eFootball terá colaboração com o anime de Blue Lock.</title>
+    <title>Blue Lock Blog - Capítulo 260 de Blue lock</title>
 </head>
 
 <body>
@@ -27,13 +27,13 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Posts">Posts</a>
+                        <a class="nav-link" href="index.html">Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Newsletter">Newsletter</a>
+                        <a class="nav-link" href="index.html">Newsletter</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#Autor">Autor</a>
+                        <a class="nav-link" href="autor.html">Autor</a>
                     </li>
                 </ul>
             </div>
