--- a/autor.html
+++ b/autor.html
@@ -28,13 +28,13 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Posts">Posts</a>
+                            <a class="nav-link" href="index.html">Posts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Newsletter">Newsletter</a>
+                            <a class="nav-link" href="index.html">ewsletter">Newsletter</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#Autor">Autor</a>
+                            <a class="nav-link" href="autor.html">Autor</a>
                         </li>
                     </ul>
                 </div>
