--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
   <!--posts-->
 
-  <section class="container mt-5">
+  <section class="container mt-5" id="Newsletter">
     <div class="row">
       <div class="col-4 posts">
         <a href="capa.html" target="_blank" class="text-decoration-none text-dark">
@@ -270,90 +270,94 @@
       <div class="ranking col-4">
         <h4 class="fw-bolder">Ranking</h4>
         <div class="border-bottom border-3 pb-2 pt-3">
-          <div class="icon-rank d-flex">
-            <img src="img/Icon/Polygon 1.jpg" alt="">
-            <div class="name d-flex">
-              <a href="parisxgen.html" class="text-decoration-none ms-3">
-                <p class="mb-0">
-                  paris x gen
-                </p>
-              </a>
-              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#1</span><span class="ms-1 fw-bolder">RIN</span>
-                -
-                ¥198,000,000
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="border-bottom border-3 pb-2 pt-3">
-          <div class="icon-rank d-flex">
-            <img src="img/Icon/Polygon 2.png" alt="">
-            <div class="name d-flex">
-              <a href="#" class="text-decoration-none ms-3">
-                <p class="mb-0">
-                  bastard mûchen
-                </p>
-              </a>
-              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#2</span><a
-                  class="text-decoration-none text-dark" href="Isagi.html">
-                  <span class="ms-1 fw-bolder">ISAGI</span> -
+          <div class="icon-rank d-flex"><a class="text-decoration-none text-dark" href="rin.html" target="_blank">
+              <img src="img/Icon/Polygon 1.jpg" alt="">
+              <div class="name d-flex">
+                <a href="parisxgen.html" class="text-decoration-none ms-3">
+                  <p class="mb-0">
+                    paris x gen
+                  </p>
                 </a>
-                ¥150,000,000
-              </p>
-            </div>
+                <p class="h5 text ms-3 pt-1"><span class="text-secondary">#1</span><span class="ms-1 fw-bolder"><a
+                      class="text-decoration-none text-dark" href="rin.html" target="_blank">RIN</span>
+                  -
+                  ¥198,000,000
+                </p>
+              </div>
           </div>
         </div>
 
         <div class="border-bottom border-3 pb-2 pt-3">
-          <div class="icon-rank d-flex">
-            <img src="img/Icon/Polygon 3.png" alt="">
-            <div class="name d-flex">
-              <a href="#" class="text-decoration-none ms-3">
-                <p class="mb-0">
-                  ubers
+          <div class="icon-rank d-flex"><a class="text-decoration-none text-dark" href="Isagi.html" target="_blank">
+              <img src="img/Icon/Polygon 2.png" alt="">
+              <div class="name d-flex">
+                <a href="#" class="text-decoration-none ms-3">
+                  <p class="mb-0">
+                    bastard mûchen
+                  </p>
+                </a>
+                <p class="h5 text ms-3 pt-1"><span class="text-secondary">#2</span><a
+                    class="text-decoration-none text-dark" href="Isagi.html" target="_blank">
+                    <span class="ms-1 fw-bolder">ISAGI</span> -
+                  </a>
+                  ¥150,000,000
                 </p>
-              </a>
-              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#2</span><span
-                  class="ms-1 fw-bolder">BARO</span> -
-                ¥150,000,000
-              </p>
-            </div>
+              </div>
           </div>
         </div>
 
         <div class="border-bottom border-3 pb-2 pt-3">
-          <div class="icon-rank d-flex">
-            <img src="img/Icon/Polygon 4.png" alt="">
-            <div class="name d-flex">
-              <a href="#" class="text-decoration-none ms-3">
-                <p class="mb-0">
-                  paris x gen
+          <div class="icon-rank d-flex"><a class="text-decoration-none text-dark" href="barou.html" target="_blank">
+              <img src="img/Icon/Polygon 3.png" alt="">
+              <div class="name d-flex">
+                <a href="#" class="text-decoration-none ms-3">
+                  <p class="mb-0">
+                    ubers
+                  </p>
+                </a>
+                <p class="h5 text ms-3 pt-1"><span class="text-secondary">#2</span><a
+                    class="text-decoration-none text-dark" href="barou.html" target="_blank"><span
+                      class="ms-1 fw-bolder">BARO</span> -
+                    ¥150,000,000
                 </p>
-              </a>
-              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#4</span><span
-                  class="ms-1 fw-bolder">SHIDO</span> -
-                ¥100,000,000
-              </p>
-            </div>
+              </div>
+          </div>
+        </div>
+
+        <div class="border-bottom border-3 pb-2 pt-3">
+          <div class="icon-rank d-flex"><a class="text-decoration-none text-dark" href="shido.html" target="_blank">
+              <img src="img/Icon/Polygon 4.png" alt="">
+              <div class="name d-flex">
+                <a href="#" class="text-decoration-none ms-3">
+                  <p class="mb-0">
+                    paris x gen
+                  </p>
+                </a>
+                <p class="h5 text ms-3 pt-1"><span class="text-secondary">#4</span><a
+                    class="text-decoration-none text-dark" href="shido.html" target="_blank"><span
+                      class="ms-1 fw-bolder">SHIDO</span> -
+                    ¥100,000,000
+                </p>
+              </div>
           </div>
         </div>
 
         <div class="py-3">
-          <div class="icon-rank d-flex">
-            <img src="img/Icon/Polygon 5.png" alt="">
-            <div class="name d-flex">
-              <a href="#" class="text-decoration-none ms-3">
-                <p class="mb-0">
-                  fc barcha
+          <div class="icon-rank d-flex"><a class="text-decoration-none text-dark" href="bachira.html" target="_blank">
+              <img src="img/Icon/Polygon 5.png" alt="">
+              <div class="name d-flex">
+                <a href="#" class="text-decoration-none ms-3">
+                  <p class="mb-0">
+                    fc barcha
+                  </p>
+                </a>
+                <p class="h5 text ms-3 pt-1"><span class="text-secondary">#5</span><a
+                    class="text-decoration-none text-dark" href="bachira.html" target="_blank"><span
+                      class="ms-1 fw-bolder">BACHIRA</span>
+                    -
+                    ¥79,000,000
                 </p>
-              </a>
-              <p class="h5 text ms-3 pt-1"><span class="text-secondary">#5</span><span
-                  class="ms-1 fw-bolder">BACHIRA</span>
-                -
-                ¥79,000,000
-              </p>
-            </div>
+              </div>
           </div>
         </div>
       </div>
