--- a/rin.html
+++ b/rin.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="inter.html">Posts</a>
+                        <a class="nav-link" href="index.html">Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Newsletter</a>
@@ -47,70 +47,56 @@
             <div class="logo mb-5">
                 <img src="img/Blue_Lock_Logo (1).png" alt="">
             </div>
-            <div class="categoria py-4 text-center">
-                <p class="text-white px-5 ps-5 mb-0">Noticia</p>
-                <p class="text-white px-5 ms-4 mb-0">Game</p>
+            <div class="mt-5">
+                <h4 class="titulo text-center fw-bold"><a href="" class="text-decoration-none">Personagens</a></h4>
+                <h1 class="text-dark text-center fw-bold mb-5">Itoshi Rin</h1>
             </div>
-            <h1 class="titulos ps-5 fw-semibold"> eFootball terá colaboração com o anime <span class="text-primary">Blue
-                    Lock.</span>
-            </h1>
-            <p class="ps-5 fs-5 mt-3">Com cartas temáticas, avatares, kits, desafios no jogo e mais.</p>
-            <div class="fig">
-                <img src="img/efootball-bluelock-qe149r88o10x.webp" alt="" class="w-100">
+            <div class="col-6 emalta">
+                <h4>Informações</h4>
+                <div class="row">
+                    <ul class="list-group list-group-flush mt-5 col-6">
+                        <li class="list-group-item"><span class="fw-bold">Gênero:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Idade:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Aniversário:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Altura:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Peso</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Cor do Cabelo:</span></li>
+                        <li class="list-group-item"><span class="fw-bold">Cor dos olhos:</span></li>
+                    </ul>
+                    <ul class="list-group list-group-flush mt-5 col-6">
+                        <li class="list-group-item">Macho</li>
+                        <li class="list-group-item">16</li>
+                        <li class="list-group-item">Setembro, 09</li>
+                        <li class="list-group-item">186 cm(6'1')</li>
+                        <li class="list-group-item">74 kg (163 lbs)</li>
+                        <li class="list-group-item">Verde escuro</li>
+                        <li class="list-group-item">Azul-petróleo brilhante</li>
+                    </ul>
+                </div>
+                <h4 class="mt-5">Sobre</h4>
+                <p class="sobre mt-5">Rin Itoshi é um candidato ao Blue Lock, que atualmente joga como atacante do Paris
+                    X
+                    Gen na Liga
+                    Neo Egoísta.</p>
+                <p class="sobre">Rin é o irmão mais novo de Sae Itoshi , que começou a jogar futebol com ele ainda
+                    jovem. Ele jogou como atacante em
+                    todos os times em que atuou e sempre foi considerado um dos melhores jogadores. Ele é considerado o
+                    melhor jogador do
+                    Blue Lock até ser oficialmente confirmado por Jinpachi Ego no início da Terceira Seleção.</p>
+                <p class="sobre mb-5">O principal objetivo de Rin é se tornar o melhor atacante do mundo. Ele costumava
+                    ter a fixação de derrotar seu irmão no
+                    futebol e, por sua vez, se vingar por ter abandonado o sonho que compartilhavam, mas depois que o
+                    Blue Lock Eleven jogou
+                    contra o Japão Sub-20 ele desistiu da vingança e decidiu mudar para que ele pudesse tornar-se o
+                    melhor atacante do
+                    mundo, derrotando qualquer um em seu caminho. Rin é um candidato ideal para o tipo de atacante que
+                    Ego se esforça para
+                    criar.</p>
             </div>
-            <div class="information ps-5 mb-4">
-                <p class="mt-5 lh-sm">A Konami anunciou uma parceria entre eFootball 2024 e o anime de futebol Blue
-                    Lock, que inclui a adição de novos
-                    conteúdos na forma de cartas temáticas, avatares, kits, desafios no jogo, entre outros.
-                </p>
-
-                <p class="lh-sm">Durante o período limitado da campanha, que começou em 21 de março e vai até 11 de
-                    abril, os usuários podem adicionar
-                    uma variedade de cartas de edição especial do Blue Lock aos seus “times dos sonhos”, começando com
-                    as contratações
-                    gratuitas de Takefusa Kubo e Filippo Inzaghi. Esses jogadores fazem parte de uma série de cartas do
-                    eFootball
-                    especialmente criadas em colaboração com os personagens do Blue Lock e as estrelas do futebol da
-                    vida real.
-                </p>
+            <div class="col-6">
+                <img class="ms-5" src="img/characters/rin.png" alt="">
             </div>
-            <div class="fig">
-                <img src="img/efootball-bluelock-kit-en.avif" class="w-100" alt="">
-            </div>
-            <div class="information ps-5 my-2">
-                <p class="fs-5 mt-4">Como parte da colaboração, os uniformes de edição limitada do “time vermelho do
-                    Blue Lock” e do “time branco do Blue
-                    Lock” podem ser usados por todos os “times dos sonhos”. Os jogadores podem desbloquear o kit do time
-                    branco com o
-                    “Pacote do Blue Lock: Yoichi Isagi” e, ao participar do “Tour Event: Segunda Seleção do Blue Lock”,
-                    também podem receber
-                    o kit do “time vermelho do Blue Lock”. Por meio de várias conquistas e desafios da campanha, os
-                    usuários podem obter
-                    diversas recompensas, totalizando até 150.000 de Exp., 60.000 GP e 50 moedas do eFootball.
-                </p>
-
-                <p class="fs-5 ps-5">Fonte: <a href="https://www.konami.com/efootball/pt-br/page/2024/versioninfo_v3-40"
-                        class="text-decoration-none fw-bolder">Konami Efootball</a></p>
-
-                <ul class="fs-5 ps-5 my-3"><span class="fw-bolder">Leia também:</span>
-                    <li class="mt-3 ps-4"><a href="#" class="text-decoration-none">Filme recebe trailer
-                            inédito focado em Seishiro Nagi e Mikage Reo
-                        </a>
-                    </li>
-                    <li class="ps-4"><a href="#" class="text-decoration-none">Todas as vezes que o
-                            Brasil apareceu em Blue Lock
-                        </a>
-                    </li>
-                    <li class="ps-4"><a href="#" class="text-decoration-none">Blue Lock revela capa do volume
-                            29
-                        </a>
-                    </li>
-                    <li class="ps-4"><a href="#" class="text-decoration-none">Saiba tudo sobre a Liga Neo
-                            Egoísta
-                        </a>
-                    </li>
-                </ul>
-            </div>
+        </div>
     </section>
 
 
