--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
 
         <div class="col-3">
           <h4 class="pt-4 text-white fw-semibold">Projeto</h4>
-          <p class="text-white">Blog desenvolvido por @Vinildo focado em conteúdo do universo de Blue Lock.</p>
-          <a href="https://github.com/Vinildo" target="_blank" rel="noopener" class="text-decoration-none text-white"><i
+          <p class="text-white">Blog desenvolvido por @VNeris focado em conteúdo do universo de Blue Lock.</p>
+          <a href="https://github.com/VNeris" target="_blank" rel="noopener" class="text-decoration-none text-white"><i
               class='bx bxl-github'></i></a>
         </div>
       </div>
