--- a/autor.html
+++ b/autor.html
@@ -8,7 +8,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Blue Lock Blog - Autor</title>
+    <title>Blue Lock Blog - Termos de Uso</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                             <a class="nav-link" href="index.html">Posts</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">ewsletter">Newsletter</a>
+                            <a class="nav-link" href="index.html">Newsletter</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="autor.html">Autor</a>
@@ -48,21 +48,19 @@
                 <div class="row px-5">
                     <div class="col-3">
                         <figure class="imagemautor p-5">
-                            <a href="https://github.com/Vinildo" target="_blank">
-                                <img src="img/WhatsApp Image 2024-03-13 at 00.27.22.jpeg" alt="">
+                            <a href="https://github.com/VNeris" target="_blank">
+                                <img src="img/IMG-20230128-WA0015.jpg" class="rounded-4" alt="">
                             </a>
                         </figure>
                     </div>
                     <div class="col mt-5">
-                        <h3 class="titul fw-bolder">Vinildo</h3>
-                        <p class="fs-5 mt-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid veniam
-                            voluptatem
-                            cumque
-                            odit ut totam porro vel quod. Quisquam consequatur quis facilis et quod molestias adipisci
-                            corporis
-                            accusantium ducimus ex?</p>
+                        <h3 class="titul fw-bolder">VNeris</h3>
+                        <p class="fs-5 mt-4"> 1. Aceitação dos Termos
+                            Ao acessar e utilizar este blog sobre "Blue Lock", você concorda em cumprir e ser regido por
+                            estes Termos de Uso. Caso
+                            não concorde com algum termo, não utilize este blog.</p>
                         <div class="icones mt-3">
-                            <a href="https://github.com/Vinildo" class="text-decoration-none text-secondary"
+                            <a href="https://github.com/VNeris" class="text-decoration-none text-secondary"
                                 target="_blank">
                                 <i class='bx bxl-github'></i>
                             </a>
