--- a/barou.html
+++ b/barou.html
@@ -27,7 +27,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">osts">Posts</a>
+                        <a class="nav-link" href="index.html">Posts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">Newsletter</a>
@@ -121,9 +121,10 @@
 
                 <div class="col-3">
                     <h4 class="pt-4 text-white fw-semibold">Projeto</h4>
-                    <p class="text-white">Blog desenvolvido por @Vinildo focado em conteúdo do universo de Blue Lock.
+                    <p class="text-white">Blog desenvolvido por @VNeris focado em conteúdo do universo de Blue Lock.
                     </p>
-                    <a href="#" class="text-decoration-none text-white"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/VNeris" class="text-decoration-none text-white"><i
+                            class='bx bxl-github'></i></a>
                 </div>
             </div>
         </section>
