--- a/capa.html
+++ b/capa.html
@@ -125,9 +125,10 @@
 
                 <div class="col-3">
                     <h4 class="pt-4 text-white fw-semibold">Projeto</h4>
-                    <p class="text-white">Blog desenvolvido por @Vinildo focado em conteúdo do universo de Blue Lock.
+                    <p class="text-white">Blog desenvolvido por @VNeris focado em conteúdo do universo de Blue Lock.
                     </p>
-                    <a href="#" class="text-decoration-none text-white"><i class='bx bxl-github'></i></a>
+                    <a href="https://github.com/VNeris" class="text-decoration-none text-white"><i
+                            class='bx bxl-github'></i></a>
                 </div>
             </div>
         </section>
