--- a/autor.html
+++ b/autor.html
@@ -8,7 +8,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <title>Blue Lock Blog - Termos de Uso</title>
+    <title>Blue Lock Blog - Autor</title>
 </head>
 
 <body>
@@ -49,16 +49,16 @@
                     <div class="col-3">
                         <figure class="imagemautor p-5">
                             <a href="https://github.com/VNeris" target="_blank">
-                                <img src="img/IMG-20230128-WA0015.jpg" class="rounded-4" alt="">
+                                <img src="img/autor.jpg" class="rounded-4" alt="">
                             </a>
                         </figure>
                     </div>
                     <div class="col mt-5">
                         <h3 class="titul fw-bolder">VNeris</h3>
-                        <p class="fs-5 mt-4"> 1. Aceitação dos Termos
-                            Ao acessar e utilizar este blog sobre "Blue Lock", você concorda em cumprir e ser regido por
-                            estes Termos de Uso. Caso
-                            não concorde com algum termo, não utilize este blog.</p>
+                        <p class="fs-5 mt-4"> Sou um desenvolvedor front-end com uma paixão por criar interfaces de usuário modernas e responsivas. Com uma sólida
+                        base em HTML, CSS e JavaScript, tenho experiência em construir sites e aplicações web que oferecem uma experiência de
+                        usuário intuitiva e eficiente. Minha jornada na programação começou há 1 ano, e desde então, tenho me dedicado a
+                        aprender e aplicar as melhores práticas de desenvolvimento front-end.</p>
                         <div class="icones mt-3">
                             <a href="https://github.com/VNeris" class="text-decoration-none text-secondary"
                                 target="_blank">
@@ -77,9 +77,11 @@
                 </div>
             </div>
         </section>
+
+
         <footer class="footer mt-5 pb-5">
             <section class="container">
-                <div class="row">
+                <div class="row ">
                     <div class="col-5">
                         <h4 class="fw-semibold text-white pt-4">Inscreva-se</h4>
                         <p class="text-secondary pb-3">fique por dentro das noticias do nosso Blog</p>
@@ -92,7 +94,7 @@
                         </div>
                     </div>
 
-                    <div class="col-4">
+                    <div class="col-lg-4 md-invisible">
                         <h4 class="text-white fw-semibold pt-4">Confira</h4>
                         <ul class="lista text-secondary">
                             <li><a href="">Sobre</a></li>
