--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <!--logo introdução-->
 
-  <section class="content container">
+  <section class="content">
     <div class="row">
       <div class="logo col mb-5">
         <img src="img/Blue_Lock_Logo (1).png" alt="">
@@ -92,7 +92,7 @@
         </a>
         <a href="blaze.html" target="_blank">
           <div class="carousel-item">
-            <figure>
+            <figure class="">
               <img src="img/bb_ogp.png" class="w-100" alt="...">
               <div class="carousel-caption d-md-block">
                 <p class="bg-primary w-75 position-absolute start-50 bottom-50 translate-middle fs-5">Blue lock Blaze
@@ -138,7 +138,7 @@
         </div>
       </div>
     </div>
-    <div class="col-4 posts">
+    <div class="d-sm-none col-4 posts">
       <a href="fcmobile.html" target="_blank" class="text-decoration-none text-dark">
         <div class="cars">
           <img src="img/blue-lock-x-fc-mobile-concept-v0-kijrxz41ba1c1.jpg" height="300px" class="card-img-top rounded"
